[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
runtime = { path = "../../libs/runtime" }
pyo3 = "0.23.5"
 